--- a/src/main/resources/templates/pages/httplog.html
+++ b/src/main/resources/templates/pages/httplog.html
@@ -15,7 +15,7 @@
 <table class="layui-hide" id="httplog" lay-filter="httplog" ></table>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
-    <legend>请求面板</legend>
+    <legend>面板</legend>
 </fieldset>
 
 
